[package]
name = "uptime"
version = "0.1.0"
authors = ["Aiden McClelland <aiden.mcclelland@saltlending.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.1", features = ["socks", "blocking"] }
failure = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.1"
serde_urlencoded = "0.6.1"
lazy_static = "1.4.0"